# hybrid-backtest

./: CMakeLists.txt  Dockerfile  README.md
src/: main.cpp
tests/: run_backtest.py
